# 2.03.01 (38273) Jan 27, 2010
1/26/10 #2131, fix color of ice surface below ELA
1/26/10 #2130, fix color of ripples on ice surface
# 2.03.00 (38002) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 2.02.02 (37898) Jan 5, 2010
1/5/10 #2067,2072, test performance fix in PaintImmediateDialog
# 2.02.01 (37356) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
12/4/09 #89, subclass PaintImmediateDialog instead of JDialog
# 2.02.00 (36275) Oct 30, 2009
10/30/09 new production version with minor enhancements
# 2.01.06 (33564) Jul 23, 2009
7/23/09 revert #999 changes
7/23/09 #999, problems with acc_m=0.0298, revert to original value
# 2.01.05 (33558) Jul 23, 2009
7/23/09 #999, set acc_m=0.0298 to smooth out bump in "length vs time" curve
7/23/09 move model and developer controls into GlaciersModule base class
7/23/09 #999, add developer control panel for model constants
7/23/09 fix: make each instance of Glacier have its own EvolutionState for debugging
# 2.01.04 (33406) Jul 16, 2009
7/16/09 change requests
7/16/09 #766, add snow patch to birds-eye view
# 2.01.03 (33403) Jul 16, 2009
7/16/09 change requests
7/16/09 #766, use ice color for snow patch surface, light gray for cross-section
7/16/09 #766, fix infinite loop in snow patch geometry generation
7/16/09 #766, put snow patch in its own layer, so that it can be in front of debris
7/16/09 #766, add surface to snow patch, shown in green
> show snow patch between terminus and ELA
7/16/09 #766, first step toward snow patch between terminus and ELA, cross-section only, shown in red.
> make ice thickness tool "snap" to surface only between headwall and terminus, otherwise show "?"
7/16/09 #766, make calipers snap and show value on when ice thickness is zero, otherwise show "?"
7/16/09 #1734, move "Glacier Evolution State" dialog to Developer menu
> fewer decimal places (1) for climate controls and glacial budget meter